--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -15,3 +15,8 @@ spring:
           uri: http://localhost:8080/
           predicates:
             - Path=/books/**
+
+        - id: auth-service
+          uri: http://localhost:8082/
+          predicates:
+            - Path=/auth/**
