--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -21,6 +21,7 @@ ext {
 
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    implementation 'com.auth0:java-jwt:4.3.0'
 }
 
 dependencyManagement {
