--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 8765
 
+jwt_access_secret: SECRET
+
 spring:
   application:
     name: gateway
@@ -15,6 +17,8 @@ spring:
           uri: http://localhost:8080/
           predicates:
             - Path=/books/**
+          filters:
+            - name: JWTValidationFilter
 
         - id: auth-service
           uri: http://localhost:8082/
