--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -14,13 +14,13 @@ spring:
           lower-case-service-id: true
       routes:
         - id: book-service
-          uri: http://localhost:8080/
+          uri: ${BOOK_SERVICE_URL:http://localhost:8080}
           predicates:
             - Path=/books/**
           filters:
             - name: JWTValidationFilter
 
         - id: auth-service
-          uri: http://localhost:8082/
+          uri: ${AUTH_SERVICE_URL:http://localhost:8082}
           predicates:
             - Path=/auth/**
